--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.0.0
 
+  http: ^0.13.6  # Ensure you have the latest version
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
